--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -126,7 +126,7 @@
               <!-- Header Meta Start -->
               <div class="header-meta">
                 <div class="header-btn d-none d-md-block">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform" class="btn btn-primary">Register</a>
+                  <a href="#" class="btn btn-primary">Register</a>
                 </div>
 
                 <!-- Header Toggle Start -->
@@ -279,14 +279,14 @@
             <div class="col-lg-12">
               <div class="meeta-hero-content text-center">
                 <p class="text" data-aos-delay="700" data-aos="fade-up">
-                  2 October, İstanbul
+                  November, İstanbul
                 </p>
                 <h2 class="title" data-aos-delay="800" data-aos="fade-up">
                   Anatolian Blockchain <br />
-                  <span>Cosmoverse Side Event</span>
+                  <span> </span>
                 </h2>
                 <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
-                  <a class="btn-2" href="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform">Register Now</a>
+                  <a class="btn-2" href="">Register Now</a>
                 </div>
               </div>
             </div>
@@ -333,7 +333,7 @@
                 <div class="meeta-section-title-2">
                   <h4 class="sub-title">About Event</h4>
                   <h2 class="main-title">
-                   Anatolian Blockchain Crypto Connect II
+                   Anatolian Blockchain Crypto Connect III
                   </h2>
                 </div>
                 <!-- Section Title End -->
@@ -341,15 +341,15 @@
                 <!-- About Content Start -->
                 <div class="meeta-about-content">
                   <p>
-                    Anatolian Blockchain Crypto Connect II is a special side event
-                    of Cosmoverse 2023. This event provides an
+                    Anatolian Blockchain Crypto Connect III is a special side event
+                    of Binance Blockchain Week and Ethereum Devconnect. These events provides an
                     opportunity for project owners, entrepreneurs, investors,
                     and valuable individuals from the crypto ecosystem to come
                     together and network. The event aims to offer an enjoyable
                     experience with a dynamic program taking place from 7 pm to
                     11 pm. Don't miss this opportunity to showcase your
                     projects, meet investors, and expand your network. We bring
-                    the energy and excitement of Cosmoverse to our
+                    the energy and excitement of Binance Blockchain Week and Ethereum Devconnect to our
                     side event! Don't miss out on this opportunity to directly
                     interact with these experienced individuals!
                   </p>
@@ -1228,7 +1228,7 @@
       <!-- Event Sponsors End -->
       <div id="Sponsors" class="our-clients">
         <br />
-         <div class="meeta-section-title-2 text-center">
+         <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Bronze Sponsors</h2>
             <ul>
           <a href="https://datsproject.io/">
@@ -1237,8 +1237,8 @@
               <img src="assets/images/datsp.jpg" alt="" /></li
           ></a>
             </ul>
-        </div>
-        <div id="Sponsors" class="our-clients">
+        </div> -->
+        <!-- <div id="Sponsors" class="our-clients">
           <br />
            <div class="meeta-section-title-2 text-center">
             <h2 class="main-title">Supporters</h2>
@@ -1289,6 +1289,21 @@
           <h2 class="main-title">Past Event Sponsors</h2>
         </div>
         <ul>
+          <a href="https://datsproject.io/">
+            <li>
+              <img src="assets/images/datsp.jpg" alt="" />
+              <img src="assets/images/datsp.jpg" alt="" /></li
+          ></a>
+          <a href="https://trioblockchainlabs.com/">
+            <li>
+              <img src="assets/images/TriO_basic-file.png" alt="" />
+              <img src="assets/images/TriO_basic-file.png" alt="" /></li
+          ></a>
+          <a href="https://blockearner.com.tr/">
+            <li>
+              <img src="assets/images/block-earner.png" alt="" />
+              <img src="assets/images/block-earner.png" alt="" /></li
+          ></a>
             <a href="https://www.toobit.com/">
             <li>
               <img src="assets/images/Toobit-logo.png" alt="" />
@@ -1309,11 +1324,7 @@
               <img src="assets/images/lendexlogo 1.2.png" alt="" />
               <img src="assets/images/lendexlogo 1.2.png" alt="" /></li
           ></a>
-          <a href="https://datsproject.io/">
-            <li>
-              <img src="assets/images/datsp.jpg" alt="" />
-              <img src="assets/images/datsp.jpg" alt="" /></li
-          ></a>
+
           <a href="https://lbank.com/">
             <li>
               <img src="assets/images/lbank.png" alt="" />
@@ -1409,7 +1420,7 @@
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li> -->
         </ul>
-      </div>
+      </div> -->
       <div class="our-clients">
         <br />
         <div class="meeta-section-title-2 text-center">
@@ -2358,7 +2369,7 @@
                 <!-- Footer Newsletter Start -->
                 <div class="footer-newsletter">
                   <div class="footer-newsletter-form">
-                    <form action="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform">
+                    <form action="#">
                       <input type="text" placeholder="Your Email" />
                       <button class="btn btn-primary">Register</button>
                     </form>
@@ -2372,8 +2383,8 @@
                       <!-- Footer Info Start -->
                       <div class="footer-info">
                         <h3 class="title">Event Details</h3>
-                        <span class="date">2 October</span>
-                        <p>Cosmoverse Side Event</p>
+                        <span class="date">November</span>
+                        <p>Binance Blockchain Week and Ethereum Devconnect</p>
                         <div class="footer-widget-social" style="margin-left: 85px;">
                           <a href="https://www.instagram.com/anatolianblockchaincom/"
                             ><i class="fab fa-instagram"></i
