coinex logo added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1228,6 +1228,16 @@
       <!-- Event Sponsors End -->
       <div id="Sponsors" class="our-clients">
         <br />
+        <div class="meeta-section-title-2 text-center">
+          <h2 class="main-title">Jointly Organizer</h2>
+            <ul>
+          <a href="https://www.coinex.com/en">
+            <li>
+              <img src="assets/images/coinex.svg" alt="" />
+              <img src="assets/images/coinex.svg" alt="" /></li
+          ></a>
+            </ul>
+        </div>
          <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Bronze Sponsors</h2>
             <ul>
