--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1229,7 +1229,7 @@
       <div id="Sponsors" class="our-clients">
         <br />
         <div class="meeta-section-title-2 text-center">
-          <h2 class="main-title">Jointly Organizer</h2>
+          <h2 class="main-title">Joint Organizer</h2>
             <ul>
           <a href="https://www.coinex.com/en">
             <li>
