--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -279,7 +279,7 @@
             <div class="col-lg-12">
               <div class="meeta-hero-content text-center">
                 <p class="text" data-aos-delay="700" data-aos="fade-up">
-                  November, İstanbul
+                 18 November, İstanbul
                 </p>
                 <h2 class="title" data-aos-delay="800" data-aos="fade-up">
                   Anatolian Blockchain <br />
@@ -346,8 +346,8 @@
                     opportunity for project owners, entrepreneurs, investors,
                     and valuable individuals from the crypto ecosystem to come
                     together and network. The event aims to offer an enjoyable
-                    experience with a dynamic program taking place from 7 pm to
-                    11 pm. Don't miss this opportunity to showcase your
+                    experience with a dynamic program taking place from 1 pm to
+                    5 pm. Don't miss this opportunity to showcase your
                     projects, meet investors, and expand your network. We bring
                     the energy and excitement of Binance Blockchain Week and Ethereum Devconnect to our
                     side event! Don't miss out on this opportunity to directly
@@ -2393,7 +2393,7 @@
                       <!-- Footer Info Start -->
                       <div class="footer-info">
                         <h3 class="title">Event Details</h3>
-                        <span class="date">November</span>
+                        <span class="date">18 November</span>
                         <p>Binance Blockchain Week and Ethereum Devconnect</p>
                         <div class="footer-widget-social" style="margin-left: 85px;">
                           <a href="https://www.instagram.com/anatolianblockchaincom/"
